# trunk

./: .flowtransport_application.cpp.swp  DRAC_cat_13_04_2015.odt  flowtransport_application.cpp  flowtransport_application.cpp~  w
home/enric/Escritorio/cheproo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
kratos/applications/PorousMediaApplication/: CMakeLists.txt  CMakeLists.txt~  PorousMediaApplication.py  PorousMediaApplication.py~  custom_strategies.7z  flow_application.cpp~  flow_application.h~  porous_media_application.cpp  porous_media_application.cpp~  porous_media_application.h  porous_media_application.h~
kratos/applications/PorousMediaApplication/custom_conditions/: leakage.cpp  leakage.cpp~  massflow.cpp  massflow.cpp~  massflow.h~  sinksource.cpp  sinksource.cpp~  sinksourcepressure.cpp
kratos/applications/PorousMediaApplication/custom_elements/: flow_2d.cpp  flow_2d.cpp~  flow_2d.h  flow_2d.h~  flowpressuretrans_2d.cpp  flowpressuretrans_2d.h  flowtrans_2d.cpp  flowtrans_2d.cpp~  flowtrans_2d.h
kratos/applications/PorousMediaApplication/custom_python/: add_custom_strategies_to_python.cpp  add_custom_strategies_to_python.h~  add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  flow_python_application.cpp~  kratos_flow_python_application.cpp~  porous_media_python_application.cpp
kratos/applications/PorousMediaApplication/custom_utilities/: calculate_mean_temp.h  calculate_mean_temp.h~
kratos/applications/PorousMediaApplication/python_scripts/: flow_solver.py  flow_solver.py~  flow_solver_advanced.py~  fractional_solver.py  fractional_solver.py~  fractional_solver_coupled.py  fractional_step_solver.py~  strategyBasicFlowSolver.py~  strategyFractionalCoupled.py
kratos/applications/flowtransport_application/: CMakeLists.txt  CMakeLists.txt~  FlowTransportApplication.py  Makefile  flowtransport_application.cpp
kratos/applications/flowtransport_application (copia)/: CMakeLists.txt  CMakeLists.txt~  cmake_install.cmake  flowtransport_application.cpp~  flowtransport_application.h~
kratos/applications/flowtransport_application (copia)/custom_conditions/: leakage.cpp  massflow.cpp  massflow.cpp~  pointflow.cpp  pointflow.cpp~  pointflow.h~  pointheat.cpp  pointheat.cpp~  pointheat.h  sinksource.cpp  sinksource.cpp~  sinksourcepressure.cpp
kratos/applications/flowtransport_application (copia)/custom_elements/: darcy.cpp~  diffconvst_2d.h~  flowDarcy.cpp~  poisson_2d.cpp  poisson_2d.cpp~  poisson_2d.h  transport.cpp  transport.cpp~  transport.h  transport.h~
kratos/applications/flowtransport_application (copia)/custom_python/: add_custom_strategies_to_python.cpp~
kratos/applications/flowtransport_application (copia)/custom_strategies/: iterative_transport_strategy.h~
kratos/applications/flowtransport_application (copia)/python_scripts/: fluid_solver.py  fractional_iterative_solver.py  iterative_transport_solver.py  strategy_python.py  strategy_python.py~
kratos/applications/flowtransport_application (copia)/test_examples/: FluidTransport.mdpa~  art4_0.post.msh  art4_0.post.res  example.mdpa  example.py~  example.time  exampleTwoModels.py  exampleTwoModels2.py~
kratos/applications/flowtransport_application/FlowLow.gid/: FlowLow.geo  FlowLow.lin  FlowLow.msh  FlowLow.time  FlowLow.vv  FlowLow_0.post.vv
kratos/applications/flowtransport_application/FlowT.gid/: FlowT.cnd  FlowT.geo  FlowT.lin  FlowT.mdpa  FlowT.msh  FlowT.post.lst  FlowT.post.vv  FlowT.py  FlowT.time  FlowT.vv  FlowT_0.post.msh  FlowT_0.post.res
kratos/applications/flowtransport_application/FlowTotal.gid/: FlowTotal.geo  FlowTotal.lin  FlowTotal.mdpa  FlowTotal.msh  FlowTotal.post.lst  FlowTotal.post.vv  FlowTotal.prb  FlowTotal.py  FlowTotal.py~  FlowTotal.time  FlowTotal.vv  FlowTotal_0.post.msh  FlowTotal_0.post.res  FlowTotal_0.post.vv
kratos/applications/flowtransport_application/FlowTransport.gid/: FlowTransport.err  FlowTransport.geo  FlowTransport.info  FlowTransport.lin  FlowTransport.mat  FlowTransport.mdpa  FlowTransport.msh  FlowTransport.prb  FlowTransport.py  FlowTransport.time  FlowTransport.vv  FlowTransport_0.post.msh  FlowTransport_0.post.res  FlowTransport_0.post.vv
kratos/applications/flowtransport_application/custom_conditions/: leakage.h  leakage.h~  massflow.h  pointsource.cpp~  pointsource.h  sinksource.h  sinksourcepressure.h
kratos/applications/flowtransport_application/custom_elements/: darcy.cpp  diffconv_2d.h  diffconv_2d.h~  diffconvst_2d.h  diffusion_2d.cpp  diffusion_2d.cpp~  diffusion_2d.h  flowDarcy.cpp  flowDarcy.h  poisson_2d.cpp  poisson_2d.cpp~  prove.f
kratos/applications/flowtransport_application/custom_python/: add_custom_strategies_to_python.cpp  add_custom_strategies_to_python.h  flowtransport_python_application.cpp  flowtransport_python_application.cpp~
kratos/applications/flowtransport_application/custom_strategies/: fractional_iterative_configuration.h  fractional_iterative_strategy.h  iterative_flow_configuration.h  iterative_flow_configuration.h~  iterative_flow_strategy.h  iterative_flow_strategy.h~  iterative_transport_configuration.h  iterative_transport_configuration.h~
kratos/applications/flowtransport_application/por.gid/: por.err  por.geo  por.info  por.lin  por.mdpa  por.msh  por.prb  por.py  por.vv
kratos/applications/flowtransport_application/python_scripts/: iterative_fluid_solver.py  iterative_fluid_solver.py~  iterative_transport_solver.py~  thermal_solver.py~
kratos/applications/flowtransport_application/test_examples/: FluidTransport.mdpa~  (+6 more)
kratos/applications/henry_application/: CMakeLists.txt  CMakeLists.txt~  HenryApplication.py  henry_application.cpp  henry_application.cpp~  henry_application.h  henry_application.h~
kratos/applications/purediffusion_application-old/: CMakeLists.txt  PureDiffusionApplication.py~  TestApplication.py~  purediffusion_application.cpp  purediffusion_application.cpp~  purediffusion_application.h~
kratos/applications/unit_benchmark_test_application/: CMakeLists.txt  unit_benchmark_test_application.cpp  unit_benchmark_test_application.h
(+748 files in other folders)
